# shen

./: .pre-commit-config.yaml  .pypirc.example  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
src/shen/: __init__.py  cli.py
src/shen/core/: __init__.py  app.py  config.py  plugin_manager.py
src/shen/mcp/: __init__.py  client.py  manager.py  models.py
src/shen/plugins/: __init__.py
src/shen/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_mcp.py
